# potential-engine

./: .gitignore  CMakeLists.txt  README.md
OpenGL Windows/: CMakeLists.txt  OpenGL Windows.cpp  OpenGL Windows.h
OpenGL Windows/engine/: CMakeLists.txt
OpenGL Windows/engine/core/: window.cpp  window.hpp
OpenGL Windows/engine/core/controllers/: camera.cpp  camera.hpp  input.cpp  input.hpp  time.cpp  time.hpp  window_context.cpp  window_context.hpp
OpenGL Windows/engine/core/frame_buffers/: depth_frame_buffer.cpp  depth_frame_buffer.hpp  frame_buffer.cpp  frame_buffer.hpp  frame_buffer_quad.cpp  frame_buffer_quad.hpp  render_buffer.cpp  render_buffer.hpp
OpenGL Windows/engine/core/geometry/: Mesh.cpp  Mesh.hpp  element_buffer.cpp  element_buffer.hpp  vertex.cpp  vertex.hpp  vertex_buffer.cpp  vertex_buffer.hpp
OpenGL Windows/engine/core/math_types/: matrix4.cpp  matrix4.hpp  number_operations.hpp  quaternion.cpp  quaternion.hpp  transform.cpp  transform.hpp  vector2.cpp  vector2.hpp  vector3.cpp  vector3.hpp  vector4.cpp  vector4.hpp
OpenGL Windows/engine/core/model_import/: mesh_data.hpp  model_importer.cpp  model_importer.hpp
OpenGL Windows/engine/core/scene/: actor.cpp  actor.hpp  directionallight.cpp  directionallight.hpp  iscene_renderable.hpp  light.cpp  light.hpp  object.cpp  object.hpp  pointlight.cpp  pointlight.hpp  scene.cpp  scene.hpp  spotlight.cpp  spotlight.hpp
OpenGL Windows/engine/core/shading/: Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  cube_map.cpp  cube_map.hpp  depth_texture.cpp  depth_texture.hpp  itexture.hpp  material.cpp  material.hpp  material_property_types.hpp  uniform_buffer.cpp  uniform_buffer.hpp
OpenGL Windows/engine/core/types/: color.cpp  color.hpp  types.hpp
OpenGL Windows/engine/core/ui_utils/: ui_boolean_value.hpp  ui_context.hpp  ui_transform.cpp  ui_transform.hpp
OpenGL Windows/engine/primitives/: Quad.hpp
OpenGL Windows/engine/utils/: Logger.cpp  Logger.hpp  ShaderFile.cpp  ShaderFile.hpp  Utils.hpp  stb_img_loader.cpp  stb_img_loader.hpp
OpenGL Windows/excercises/: base_main.cpp  excercise_1.cpp  excercise_2.cpp  excercise_3.cpp  excercise_3_5_6.cpp
OpenGL Windows/excercises/Camera-first/: CameraMove.cpp
OpenGL Windows/excercises/Lighting-basic/: BasicLighting.cpp  BasicPhong.cpp  GoraudShading.cpp  PhongViewSpace.cpp  RotatingLight.cpp
OpenGL Windows/excercises/Lights/: DirectionalLight.cpp  MultipleLights.cpp  PointLight.cpp  SpotLight.cpp
OpenGL Windows/excercises/Materials/: LightMaps.cpp  MaterialsBasic.cpp
OpenGL Windows/excercises/Model importing/: ModelImporting_basic.cpp
OpenGL Windows/excercises/Screen Effects/: BlendingBasic.cpp  FrameBufferBasics_config.json  FrameBufferRearView_config.json  FramebufferBasics.cpp  FramebufferRearView.cpp  SkyboxBasic_config.json  skybox_Basic.cpp  skybox_gammaCorrection.cpp
OpenGL Windows/excercises/Shadow Mapping/: shadows_dir_light.json  shadows_directionalLight.cpp
OpenGL Windows/excercises/Test-template/: SingleCube.cpp
OpenGL Windows/excercises/Texture excercises/: base_exc.cpp
OpenGL Windows/excercises/Transformations/: base_exc.cpp
OpenGL Windows/excercises/first-3D/: Multiple_cubes.cpp  ZTest.cpp  base_exc.cpp
Shaders/: VertexBasic.shader
Shaders/Framebuffer basics/: screen_frag_basic.shader  screen_frag_blurr.shader  screen_frag_edge-detect.shader  screen_frag_grayscale.shader  screen_frag_invert.shader  screen_frag_red.shader  screen_frag_sharpen.shader
Shaders/Lights exercise/: Directional_Light.shader  Multiple_Lights.shader  Point_Light.shader  Spot_Light.shader
Shaders/Model importing/: Blinn-Phong-Frag.shader  MIBasic.shader
Shaders/Shadow Mapping Shaders/: Debug-FrameBuffer-Screen-Frag.shader  DepthFB-Frag.shader  DepthFB-Vertex.shader  FrameBuffer-Screen-Frag.shader  FrameBuffer-Screen-Vertex.shader  Model-Blinn-Phong-Frag.shader  Model-Vertex.shader
Shaders/Skyboxes/: skybox_frag.shader  skybox_vertex.shader
assets/: cube-test.dae
