set (CORE_FILES 
	core/window.cpp 
	core/shading/Shader.cpp 
	core/shading/Texture.cpp 
	core/geometry/Mesh.cpp 
	core/geometry/vertex_buffer.cpp 
	core/geometry/element_buffer.cpp 
	core/shading/uniform_buffer.cpp 
	core/shading/material.cpp 
	core/controllers/camera.cpp 
	core/controllers/input.cpp 
	core/controllers/window_context.cpp
	core/math_types/transform.cpp 
	core/math_types/vector2.cpp 
	core/math_types/vector3.cpp 
	core/math_types/vector4.cpp 
	core/math_types/matrix4.cpp 
	core/math_types/quaternion.cpp
	utils/ShaderFile.cpp 
	utils/Logger.cpp
	utils/stb_img_loader.cpp
	core/controllers/time.cpp 
	core/scene/object.cpp
	core/types/color.cpp 
	core/scene/light.cpp 
	core/scene/directionallight.cpp 
	core/scene/actor.cpp 
	core/scene/pointlight.cpp 
	core/scene/spotlight.cpp 
	core/scene/scene.cpp 
	core/model_import/vertex.cpp 
	core/model_import/model_importer.cpp 
	core/ui_utils/ui_transform.cpp
	core/frame_buffers/frame_buffer.cpp
	core/frame_buffers/render_buffer.cpp 
	core/frame_buffers/frame_buffer_quad.cpp 
	core/shading/cube_map.cpp
)
add_library (engine ${CORE_FILES})